z-index fixes

--- a/newamericadotorg/assets/scss/components/content-list/_filters.scss
+++ b/newamericadotorg/assets/scss/components/content-list/_filters.scss
@@ -2,7 +2,7 @@
   margin: 25px 0;
   text-align: center;
   position: relative;
-  z-index: 3;
+  z-index: 2;
 
   & > * {
     text-align: left;
