--- a/newamericadotorg/assets/scss/components/mobile-menu/index.scss
+++ b/newamericadotorg/assets/scss/components/mobile-menu/index.scss
@@ -24,7 +24,7 @@
 
 .mobile-menu{
   position: fixed;
-  z-index: 3;
+  z-index: 2;
   text-align: center;
   //top: $header-height;
   top: 0;
